# datapulse

./: .env.example  .gitignore  HACKATHON_SUBMISSION.md  package.json  pyproject.toml  readme.md  requirements.txt  vercel.json
agents/analyst/: requirements.txt
agents/analyst/src/: agent_builder_client.py  correlator.py  main.py
agents/analyst/tests/: test_correlator.py
agents/resolver/: Dockerfile  requirements.txt
agents/resolver/src/: main.py  runbook_search.py
agents/sentinel/: requirements.txt
agents/sentinel/src/: detector.py  main.py  schemas.py
api/: index.py  requirements.txt
backend/api_gateway/: Dockerfile  requirements.txt
backend/api_gateway/src/: main.py
backend/api_gateway/tests/: test_approve_action.py  test_create_incident.py  test_slack_signature.py
data/generator/: generate_data.py
docs/: FULL_DOCUMENTATION.md  architecture.md
frontend/kibana-plugin/: package.json
frontend/kibana-plugin/public/: index.html  index.tsx
frontend/kibana-plugin/src/: agents.jsx  app.jsx  app.tsx  index.js  integrations.jsx  profile.jsx  router.jsx  settings.jsx
infra/local/: docker-compose.yml
integrations/mcp-adapters/: __init__.py  mcp_server.py  requirements.txt
integrations/mcp-adapters/jira_adapter/: __init__.py  jira_adapter.py
integrations/workflows/: workflow_adapter.py
scripts/: bootstrap.sh  remove_emojis.py  seed_runbooks.py  setup_elasticsearch_indices.sh
tools/esql/: check_recent_deployments.json  correlate_error_logs.json  detect_anomalies.json  search_runbooks.json
tools/scripts/: register_tools.py
(+4 files in other folders)
