[project]
name = "datapulse"
version = "0.1.0"
description = "AI-Driven Incident Response Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "pydantic==2.6.4",
    "elasticsearch==8.11.0",
    "httpx==0.25.1",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "python-multipart==0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
